--- a/package.json
+++ b/package.json
@@ -1,53 +1,64 @@
 {
-  "name": "paper-dashboard-react",
-  "version": "1.2.0",
-  "private": true,
-  "homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
-  "dependencies": {
-    "bootstrap": "4.5.0",
-    "chart.js": "2.9.3",
-    "history": "4.10.1",
-    "node-sass": "4.14.1",
-    "perfect-scrollbar": "1.5.0",
-    "react": "16.13.1",
-    "react-chartjs-2": "2.9.0",
-    "react-dom": "16.13.1",
-    "react-google-maps": "9.4.5",
-    "react-notification-alert": "0.0.12",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.1",
-    "reactstrap": "8.4.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
-    "compile-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css",
-    "minify-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.min.css --output-style compressed",
-    "map-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css --source-map true"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "optionalDependencies": {
-    "@types/googlemaps": "3.39.6",
-    "@types/markerclustererplus": "2.1.33",
-    "@types/react": "16.9.35",
-    "ajv": "6.12.2",
-    "jquery": "3.5.1",
-    "typescript": "3.9.5"
-  },
-  "devDependencies": {
-    "gulp": "4.0.2",
-    "gulp-append-prepend": "1.0.8"
-  }
+	"name": "paper-dashboard-react",
+	"version": "1.2.0",
+	"private": true,
+	"homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
+	"dependencies": {
+		"bootstrap": "4.5.0",
+		"chart.js": "2.9.3",
+		"history": "4.10.1",
+		"node-sass": "4.14.1",
+		"perfect-scrollbar": "1.5.0",
+		"react": "16.13.1",
+		"react-chartjs-2": "2.9.0",
+		"react-dom": "16.13.1",
+		"react-google-maps": "9.4.5",
+		"react-notification-alert": "0.0.12",
+		"react-router": "5.2.0",
+		"react-router-dom": "5.2.0",
+		"react-scripts": "3.4.1",
+		"reactstrap": "8.4.1"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build && gulp licenses",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+		"compile-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css",
+		"minify-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.min.css --output-style compressed",
+		"map-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css --source-map true"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	],
+	"optionalDependencies": {
+		"@types/googlemaps": "3.39.6",
+		"@types/markerclustererplus": "2.1.33",
+		"@types/react": "^16.9.56",
+		"ajv": "6.12.2",
+		"jquery": "3.5.1",
+		"typescript": "^4.0.5"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^11.0.0",
+		"@commitlint/config-conventional": "^11.0.0",
+		"@types/jest": "^26.0.15",
+		"@types/node": "^14.14.6",
+		"@types/react-dom": "^16.9.9",
+		"gulp": "4.0.2",
+		"gulp-append-prepend": "1.0.8",
+		"husky": "^4.3.0"
+	},
+	"husky": {
+		"hooks": {
+			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+		}
+	}
 }
