--- a/package.json
+++ b/package.json
@@ -4,20 +4,29 @@
 	"private": true,
 	"homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
 	"dependencies": {
+		"@types/googlemaps": "3.39.6",
+		"@types/jest": "^26.0.15",
+		"@types/markerclustererplus": "2.1.33",
+		"@types/node": "^14.14.6",
+		"@types/react-dom": "^16.9.9",
+		"@types/react": "^16.9.56",
+		"ajv": "6.12.2",
 		"bootstrap": "4.5.0",
 		"chart.js": "2.9.3",
 		"history": "4.10.1",
+		"jquery": "3.5.1",
 		"node-sass": "4.14.1",
 		"perfect-scrollbar": "1.5.0",
-		"react": "16.13.1",
 		"react-chartjs-2": "2.9.0",
 		"react-dom": "16.13.1",
 		"react-google-maps": "9.4.5",
 		"react-notification-alert": "0.0.12",
-		"react-router": "5.2.0",
 		"react-router-dom": "5.2.0",
+		"react-router": "5.2.0",
 		"react-scripts": "3.4.1",
-		"reactstrap": "8.4.1"
+		"react": "16.13.1",
+		"reactstrap": "8.4.1",
+		"typescript": "^4.0.5"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -30,28 +39,26 @@
 		"map-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css --source-map true"
 	},
 	"eslintConfig": {
-		"extends": "react-app"
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
 	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	],
-	"optionalDependencies": {
-		"@types/googlemaps": "3.39.6",
-		"@types/markerclustererplus": "2.1.33",
-		"@types/react": "^16.9.56",
-		"ajv": "6.12.2",
-		"jquery": "3.5.1",
-		"typescript": "^4.0.5"
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^11.0.0",
 		"@commitlint/config-conventional": "^11.0.0",
-		"@types/jest": "^26.0.15",
-		"@types/node": "^14.14.6",
-		"@types/react-dom": "^16.9.9",
 		"gulp": "4.0.2",
 		"gulp-append-prepend": "1.0.8",
 		"husky": "^4.3.0"
