--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
 	"homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
 	"dependencies": {
 		"@types/googlemaps": "3.39.6",
+		"@types/history": "^4.7.8",
 		"@types/jest": "^26.0.15",
 		"@types/markerclustererplus": "2.1.33",
 		"@types/node": "^14.14.6",
-		"@types/react-dom": "^16.9.9",
 		"@types/react": "^16.9.56",
+		"@types/react-dom": "^16.9.9",
+		"@types/react-router-dom": "^5.1.6",
+		"@types/reactstrap": "^8.7.2",
 		"ajv": "6.12.2",
 		"bootstrap": "4.5.0",
 		"chart.js": "2.9.3",
@@ -17,14 +20,14 @@
 		"jquery": "3.5.1",
 		"node-sass": "4.14.1",
 		"perfect-scrollbar": "1.5.0",
+		"react": "16.13.1",
 		"react-chartjs-2": "2.9.0",
 		"react-dom": "16.13.1",
 		"react-google-maps": "9.4.5",
 		"react-notification-alert": "0.0.12",
-		"react-router-dom": "5.2.0",
 		"react-router": "5.2.0",
+		"react-router-dom": "5.2.0",
 		"react-scripts": "3.4.1",
-		"react": "16.13.1",
 		"reactstrap": "8.4.1",
 		"typescript": "^4.0.5"
 	},
