--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"react-router": "5.2.0",
 		"react-router-dom": "5.2.0",
 		"react-scripts": "4.0.0",
-		"reactstrap": "8.4.1",
+		"reactstrap": "^8.7.1",
 		"typescript": "^4.0.5"
 	},
 	"scripts": {
