--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"@types/googlemaps": "3.39.6",
 		"@types/history": "^4.7.8",
 		"@types/jest": "^26.0.15",
-		"@types/markerclustererplus": "2.1.33",
+		"@types/markerclustererplus": "^2.1.33",
 		"@types/node": "^14.14.6",
 		"@types/react": "^16.9.56",
 		"@types/react-dom": "^16.9.9",
@@ -24,10 +24,10 @@
 		"react-chartjs-2": "2.9.0",
 		"react-dom": "16.13.1",
 		"react-google-maps": "9.4.5",
-		"react-notification-alert": "0.0.12",
 		"react-router": "5.2.0",
 		"react-router-dom": "5.2.0",
 		"react-scripts": "4.0.0",
+		"react-toastify": "^6.1.0",
 		"reactstrap": "^8.7.1",
 		"typescript": "^4.0.5"
 	},
