--- a/package.json
+++ b/package.json
@@ -64,8 +64,15 @@
 		"@commitlint/config-conventional": "^11.0.0",
 		"gulp": "4.0.2",
 		"gulp-append-prepend": "1.0.8",
-		"husky": "^4.3.0"
+		"husky": "^4.3.0",
+		"lint-staged": "^10.5.1",
+		"prettier": "^2.1.2"
 	},
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
 	"husky": {
 		"hooks": {
 			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
