--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@types/react-router-dom": "^5.1.6",
 		"@types/reactstrap": "^8.7.2",
 		"ajv": "6.12.2",
+		"axios": "^0.21.0",
+		"axios-mock-adapter": "^1.19.0",
 		"bootstrap": "4.5.0",
 		"chart.js": "2.9.3",
 		"history": "4.10.1",
@@ -68,11 +70,11 @@
 		"lint-staged": "^10.5.1",
 		"prettier": "^2.1.2"
 	},
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write"
-    ]
-  },
+	"lint-staged": {
+		"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+			"prettier --write"
+		]
+	},
 	"husky": {
 		"hooks": {
 			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
