--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.4.0",
 		"@types/googlemaps": "3.39.6",
 		"@types/history": "^4.7.8",
 		"@types/jest": "^26.0.15",
@@ -11,8 +12,10 @@
 		"@types/node": "^14.14.6",
 		"@types/react": "^16.9.56",
 		"@types/react-dom": "^16.9.9",
+		"@types/react-redux": "^7.1.11",
 		"@types/react-router-dom": "^5.1.6",
 		"@types/reactstrap": "^8.7.2",
+		"@types/styled-components": "^5.1.4",
 		"ajv": "6.12.2",
 		"axios": "^0.21.0",
 		"axios-mock-adapter": "^1.19.0",
@@ -26,11 +29,14 @@
 		"react-chartjs-2": "2.9.0",
 		"react-dom": "16.13.1",
 		"react-google-maps": "9.4.5",
+		"react-redux": "^7.2.2",
 		"react-router": "5.2.0",
 		"react-router-dom": "5.2.0",
 		"react-scripts": "4.0.0",
 		"react-toastify": "^6.1.0",
 		"reactstrap": "^8.7.1",
+		"redux": "^4.0.5",
+		"styled-components": "^5.2.1",
 		"typescript": "^4.0.5"
 	},
 	"scripts": {
