--- a/package.json
+++ b/package.json
@@ -1,89 +1,100 @@
 {
-	"name": "paper-dashboard-react",
-	"version": "1.2.0",
-	"private": true,
-	"homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
-	"dependencies": {
-		"@reduxjs/toolkit": "^1.4.0",
-		"@types/googlemaps": "3.39.6",
-		"@types/history": "^4.7.8",
-		"@types/jest": "^26.0.15",
-		"@types/markerclustererplus": "^2.1.33",
-		"@types/node": "^14.14.6",
-		"@types/react": "^16.9.56",
-		"@types/react-dom": "^16.9.9",
-		"@types/react-redux": "^7.1.11",
-		"@types/react-router-dom": "^5.1.6",
-		"@types/reactstrap": "^8.7.2",
-		"@types/styled-components": "^5.1.4",
-		"ajv": "6.12.2",
-		"axios": "^0.21.0",
-		"axios-mock-adapter": "^1.19.0",
-		"bootstrap": "4.5.0",
-		"chart.js": "2.9.3",
-		"history": "4.10.1",
-		"jquery": "3.5.1",
-		"node-sass": "4.14.1",
-		"perfect-scrollbar": "1.5.0",
-		"react": "16.13.1",
-		"react-chartjs-2": "2.9.0",
-		"react-dom": "16.13.1",
-		"react-google-maps": "9.4.5",
-		"react-redux": "^7.2.2",
-		"react-router": "5.2.0",
-		"react-router-dom": "5.2.0",
-		"react-scripts": "4.0.0",
-		"react-toastify": "^6.1.0",
-		"reactstrap": "^8.7.1",
-		"redux": "^4.0.5",
-		"styled-components": "^5.2.1",
-		"typescript": "^4.0.5"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build && gulp licenses",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
-		"compile-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css",
-		"minify-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.min.css --output-style compressed",
-		"map-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css --source-map true"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@commitlint/cli": "^11.0.0",
-		"@commitlint/config-conventional": "^11.0.0",
-		"gulp": "4.0.2",
-		"gulp-append-prepend": "1.0.8",
-		"husky": "^4.3.0",
-		"lint-staged": "^10.5.1",
-		"prettier": "^2.1.2"
-	},
-	"lint-staged": {
-		"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-			"prettier --write"
-		]
-	},
-	"husky": {
-		"hooks": {
-			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-		}
-	}
+  "name": "paper-dashboard-react",
+  "version": "1.2.0",
+  "private": true,
+  "homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
+    "@types/googlemaps": "3.39.6",
+    "@types/history": "^4.7.8",
+    "@types/jest": "^26.0.15",
+    "@types/markerclustererplus": "^2.1.33",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/reactstrap": "^8.7.2",
+    "@types/styled-components": "^5.1.4",
+    "ajv": "6.12.2",
+    "axios": "^0.21.0",
+    "axios-mock-adapter": "^1.19.0",
+    "bootstrap": "4.5.0",
+    "chart.js": "2.9.3",
+    "history": "4.10.1",
+    "jquery": "3.5.1",
+    "node-sass": "4.14.1",
+    "perfect-scrollbar": "1.5.0",
+    "react": "16.13.1",
+    "react-chartjs-2": "2.9.0",
+    "react-dom": "16.13.1",
+    "react-google-maps": "9.4.5",
+    "react-hook-form": "^6.11.0",
+    "react-redux": "^7.2.2",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.0",
+    "react-toastify": "^6.1.0",
+    "reactstrap": "^8.7.1",
+    "redux": "^4.0.5",
+    "styled-components": "^5.2.1",
+    "typescript": "^4.0.5"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build && gulp licenses",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    "compile-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css",
+    "minify-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.min.css --output-style compressed",
+    "map-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css --source-map true"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.ts?(x)"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "gulp": "4.0.2",
+    "gulp-append-prepend": "1.0.8",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.1.2"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  }
 }
