--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass": "4.14.1",
     "perfect-scrollbar": "1.5.0",
     "react": "16.13.1",
+    "react-async": "^10.0.1",
     "react-chartjs-2": "2.9.0",
     "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
