feat: link to world anvil page on footer

--- a/.env.demo
+++ b/.env.demo
@@ -1,1 +1,2 @@
 REACT_APP_API_BASE_ROOT=http://localhost:1337
+REACT_APP_WORLD_ANVIL_HOMEPAGE="https://www.worldanvil.com/w/E6B5B7E59F8EE69CADE8A898-tocchk"
