chore: quick tidy up from tocc web to hkirs web

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^4.0.5"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test",
