--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-google-maps": "9.4.5",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.11.0",
+    "react-markdown": "^5.0.3",
     "react-redux": "^7.2.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
