--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "axios-mock-adapter": "^1.19.0",
     "bootstrap": "4.5.0",
     "chart.js": "2.9.3",
+    "classnames": "^2.2.6",
     "history": "4.10.1",
     "jquery": "3.5.1",
+    "luxon": "^1.25.0",
     "node-sass": "4.14.1",
     "perfect-scrollbar": "1.5.0",
     "react": "16.13.1",
@@ -41,6 +43,7 @@
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
+    "timeago-react": "^3.0.1",
     "typescript": "^4.0.5"
   },
   "scripts": {
@@ -85,6 +88,8 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/classnames": "^2.2.11",
+    "@types/luxon": "^1.25.0",
     "@types/react-helmet": "^6.1.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
