--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dev": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build && gulp licenses",
+    "lint": "lint",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
