--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/markerclustererplus": "^2.1.33",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
+    "@types/react-big-calendar": "^0.24.8",
     "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
@@ -29,6 +30,7 @@
     "perfect-scrollbar": "1.5.0",
     "react": "16.13.1",
     "react-async": "^10.0.1",
+    "react-big-calendar": "^0.30.0",
     "react-chartjs-2": "2.9.0",
     "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
