--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "scripts": {
     "dev": "react-scripts start",
     "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
+    "build": "react-scripts build",
     "deploy": "yarn build && firebase deploy",
     "lint": "lint",
     "test": "react-scripts test",
