--- a/package.json
+++ b/package.json
@@ -4,18 +4,6 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
-    "@types/googlemaps": "3.39.6",
-    "@types/history": "^4.7.8",
-    "@types/jest": "^26.0.15",
-    "@types/markerclustererplus": "^2.1.33",
-    "@types/node": "^14.14.6",
-    "@types/react": "^16.9.56",
-    "@types/react-big-calendar": "^0.24.8",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/reactstrap": "^8.7.2",
-    "@types/styled-components": "^5.1.4",
     "ajv": "6.12.2",
     "axios": "^0.21.0",
     "axios-mock-adapter": "^1.19.0",
@@ -36,6 +24,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.11.0",
     "react-markdown": "^5.0.3",
+    "react-query": "^3.6.0",
     "react-redux": "^7.2.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
@@ -61,10 +50,70 @@
     "map-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css --source-map true"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
+		"parser": "@typescript-eslint/parser",
+		"extends": [
+			"plugin:@typescript-eslint/recommended",
+			"plugin:prettier/recommended",
+			"prettier/prettier",
+			"prettier/@typescript-eslint"
+		],
+		"plugins": [
+			"@typescript-eslint",
+			"import",
+			"simple-import-sort",
+			"prettier"
+		],
+		"rules": {
+			"prettier/prettier": [
+				"error",
+				{
+					"printWidth": 80,
+					"tabWidth": 2,
+					"useTabs": true,
+					"semi": false,
+					"singleQuote": true,
+					"quoteProps": "as-needed",
+					"jsxSingleQuote": true,
+					"trailingComma": "es5",
+					"bracketSpacing": true,
+					"jsxBracketSameLine": false,
+					"arrowParens": "always"
+				}
+			],
+			"simple-import-sort/imports": [
+				"error",
+				{
+					"groups": [
+						[
+							"react$",
+							"react-",
+							"styled-components",
+							"date-fns",
+							"classnames",
+							"axios",
+							"copy-to-clipboard"
+						],
+						[
+							"/interfaces/",
+							"/types/"
+						],
+						[
+							"/utils/",
+							"/helpers/"
+						],
+						[
+							"reactstrap",
+							"/components/"
+						]
+					]
+				}
+			],
+			"simple-import-sort/exports": "error",
+			"sort-imports": "off",
+			"import/first": "error",
+			"import/newline-after-import": "error",
+			"import/no-duplicates": "error"
+		},
     "overrides": [
       {
         "files": [
@@ -94,6 +143,24 @@
     "@types/classnames": "^2.2.11",
     "@types/luxon": "^1.25.0",
     "@types/react-helmet": "^6.1.0",
+    "@types/googlemaps": "3.39.6",
+    "@types/history": "^4.7.8",
+    "@types/jest": "^26.0.15",
+    "@types/markerclustererplus": "^2.1.33",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.56",
+    "@types/react-big-calendar": "^0.24.8",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/reactstrap": "^8.7.2",
+    "@types/styled-components": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "husky": "^4.3.0",
@@ -101,6 +168,9 @@
     "prettier": "^2.1.2"
   },
   "lint-staged": {
+		"src/**/*.{js,jsx,ts,tsx}": [
+			"eslint --fix"
+		],
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
