--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.11.0",
+    "react-hook-form": "^6.14.2",
     "react-markdown": "^5.0.3",
     "react-query": "^3.6.0",
     "react-redux": "^7.2.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
+    "react-select": "^4.0.2",
     "react-toastify": "^6.1.0",
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
@@ -85,8 +86,8 @@
         {
           "groups": [
             [
-              "react$",
-              "react-",
+              "^react$",
+              "^react-",
               "styled-components",
               "date-fns",
               "classnames",
@@ -152,6 +153,7 @@
     "@types/react-helmet": "^6.1.0",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-select": "^4.0.11",
     "@types/reactstrap": "^8.7.2",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
