--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
+    "@types/react-table": "^7.0.28",
     "ajv": "6.12.2",
     "axios": "^0.21.0",
     "axios-mock-adapter": "^1.19.0",
@@ -30,6 +31,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^4.0.2",
+    "react-table": "^7.6.3",
     "react-toastify": "^6.1.0",
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
