--- a/package.json
+++ b/package.json
@@ -1,188 +1,189 @@
 {
-  "name": "hkirs-tvp-web",
-  "version": "1.2.0",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.4.0",
-    "@stripe/react-stripe-js": "^1.2.2",
-    "@stripe/stripe-js": "^1.12.1",
-    "@types/react-table": "^7.0.28",
-    "ajv": "6.12.2",
-    "axios": "^0.21.0",
-    "axios-mock-adapter": "^1.19.0",
-    "bootstrap": "4.5.0",
-    "chart.js": "2.9.3",
-    "classnames": "^2.2.6",
-    "date-fns": "^2.16.1",
-    "history": "4.10.1",
-    "jquery": "3.5.1",
-    "node-sass": "4.14.1",
-    "perfect-scrollbar": "1.5.0",
-    "react": "16.13.1",
-    "react-async": "^10.0.1",
-    "react-big-calendar": "^0.30.0",
-    "react-chartjs-2": "2.9.0",
-    "react-dom": "16.13.1",
-    "react-google-maps": "9.4.5",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.14.2",
-    "react-markdown": "^5.0.3",
-    "react-query": "^3.6.0",
-    "react-redux": "^7.2.2",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.0",
-    "react-select": "^4.0.2",
-    "react-table": "^7.6.3",
-    "react-toastify": "^6.1.0",
-    "reactstrap": "^8.7.1",
-    "redux": "^4.0.5",
-    "styled-components": "^5.2.1",
-    "timeago-react": "^3.0.1",
-    "typescript": "^4.0.5"
-  },
-  "scripts": {
-    "dev": "react-scripts start",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "deploy": "yarn build && firebase deploy",
-    "lint": "lint",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
-    "compile-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css",
-    "minify-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.min.css --output-style compressed",
-    "map-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css --source-map true"
-  },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-      "plugin:@typescript-eslint/recommended",
-      "plugin:prettier/recommended",
-      "prettier/prettier",
-      "prettier/@typescript-eslint"
-    ],
-    "plugins": [
-      "@typescript-eslint",
-      "import",
-      "simple-import-sort",
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": [
-        "error",
-        {
-          "printWidth": 80,
-          "tabWidth": 2,
-          "useTabs": true,
-          "semi": false,
-          "singleQuote": true,
-          "quoteProps": "as-needed",
-          "jsxSingleQuote": true,
-          "trailingComma": "es5",
-          "bracketSpacing": true,
-          "jsxBracketSameLine": false,
-          "arrowParens": "always"
-        }
-      ],
-      "simple-import-sort/imports": [
-        "error",
-        {
-          "groups": [
-            [
-              "^react$",
-              "^react-",
-              "styled-components",
-              "date-fns",
-              "classnames",
-              "axios",
-              "copy-to-clipboard"
-            ],
-            [
-              "/interfaces/",
-              "/types/"
-            ],
-            [
-              "/utils/",
-              "/helpers/"
-            ],
-            [
-              "reactstrap",
-              "/components/"
-            ]
-          ]
-        }
-      ],
-      "simple-import-sort/exports": "error",
-      "sort-imports": "off",
-      "import/first": "error",
-      "import/newline-after-import": "error",
-      "import/no-duplicates": "error"
-    },
-    "overrides": [
-      {
-        "files": [
-          "**/*.ts?(x)"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@types/classnames": "^2.2.11",
-    "@types/googlemaps": "3.39.6",
-    "@types/history": "^4.7.8",
-    "@types/jest": "^26.0.15",
-    "@types/markerclustererplus": "^2.1.33",
-    "@types/node": "^14.14.6",
-    "@types/react": "^16.9.56",
-    "@types/react-big-calendar": "^0.24.8",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/react-select": "^4.0.11",
-    "@types/reactstrap": "^8.7.2",
-    "@types/styled-components": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "gulp": "4.0.2",
-    "gulp-append-prepend": "1.0.8",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.1",
-    "prettier": "^2.1.2"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix"
-    ],
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  }
+	"name": "hkirs-tvp-web",
+	"version": "1.2.0",
+	"private": true,
+	"dependencies": {
+		"@reduxjs/toolkit": "^1.4.0",
+		"@stripe/react-stripe-js": "^1.2.2",
+		"@stripe/stripe-js": "^1.12.1",
+		"@types/react-table": "^7.0.28",
+		"ajv": "6.12.2",
+		"axios": "^0.21.0",
+		"axios-mock-adapter": "^1.19.0",
+		"bootstrap": "4.5.0",
+		"chart.js": "2.9.3",
+		"classnames": "^2.2.6",
+		"date-fns": "^2.16.1",
+		"history": "4.10.1",
+		"jquery": "3.5.1",
+		"node-sass": "4.14.1",
+		"perfect-scrollbar": "1.5.0",
+		"react": "16.13.1",
+		"react-async": "^10.0.1",
+		"react-big-calendar": "^0.30.0",
+		"react-chartjs-2": "2.9.0",
+		"react-dom": "16.13.1",
+		"react-google-maps": "9.4.5",
+		"react-helmet": "^6.1.0",
+		"react-hook-form": "^6.14.2",
+		"react-markdown": "^5.0.3",
+		"react-query": "^3.6.0",
+		"react-redux": "^7.2.2",
+		"react-router": "5.2.0",
+		"react-router-dom": "5.2.0",
+		"react-scripts": "4.0.0",
+		"react-select": "^4.0.2",
+		"react-table": "^7.6.3",
+		"react-toastify": "^6.1.0",
+		"reactstrap": "^8.7.1",
+		"redux": "^4.0.5",
+		"styled-components": "^5.2.1",
+		"timeago-react": "^3.0.1",
+		"typescript": "^4.0.5"
+	},
+	"scripts": {
+		"dev": "react-scripts start",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"deploy": "yarn build && firebase deploy",
+		"lint": "lint",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+		"compile-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css",
+		"minify-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.min.css --output-style compressed",
+		"map-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css --source-map true"
+	},
+	"eslintConfig": {
+		"parser": "@typescript-eslint/parser",
+		"extends": [
+			"plugin:@typescript-eslint/recommended",
+			"plugin:prettier/recommended",
+			"prettier/prettier",
+			"prettier/@typescript-eslint"
+		],
+		"plugins": [
+			"@typescript-eslint",
+			"import",
+			"simple-import-sort",
+			"prettier"
+		],
+		"rules": {
+			"prettier/prettier": [
+				"error",
+				{
+					"printWidth": 80,
+					"tabWidth": 2,
+					"useTabs": true,
+					"semi": false,
+					"singleQuote": true,
+					"quoteProps": "as-needed",
+					"jsxSingleQuote": true,
+					"trailingComma": "es5",
+					"bracketSpacing": true,
+					"jsxBracketSameLine": false,
+					"arrowParens": "always"
+				}
+			],
+			"simple-import-sort/imports": [
+				"error",
+				{
+					"groups": [
+						[
+							"^react$",
+							"^react-",
+							"styled-components",
+							"date-fns",
+							"classnames",
+							"axios",
+							"copy-to-clipboard"
+						],
+						[
+							"/interfaces/",
+							"/types/"
+						],
+						[
+							"/utils/",
+							"/helpers/",
+							"/hooks/"
+						],
+						[
+							"reactstrap",
+							"/components/"
+						]
+					]
+				}
+			],
+			"simple-import-sort/exports": "error",
+			"sort-imports": "off",
+			"import/first": "error",
+			"import/newline-after-import": "error",
+			"import/no-duplicates": "error"
+		},
+		"overrides": [
+			{
+				"files": [
+					"**/*.ts?(x)"
+				],
+				"rules": {
+					"import/no-anonymous-default-export": "off"
+				}
+			}
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^11.0.0",
+		"@commitlint/config-conventional": "^11.0.0",
+		"@types/classnames": "^2.2.11",
+		"@types/googlemaps": "3.39.6",
+		"@types/history": "^4.7.8",
+		"@types/jest": "^26.0.15",
+		"@types/markerclustererplus": "^2.1.33",
+		"@types/node": "^14.14.6",
+		"@types/react": "^16.9.56",
+		"@types/react-big-calendar": "^0.24.8",
+		"@types/react-dom": "^16.9.9",
+		"@types/react-helmet": "^6.1.0",
+		"@types/react-redux": "^7.1.11",
+		"@types/react-router-dom": "^5.1.6",
+		"@types/react-select": "^4.0.11",
+		"@types/reactstrap": "^8.7.2",
+		"@types/styled-components": "^5.1.4",
+		"@typescript-eslint/eslint-plugin": "^4.14.1",
+		"@typescript-eslint/parser": "^4.14.1",
+		"eslint-config-prettier": "^7.2.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-prettier": "^3.3.1",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"gulp": "4.0.2",
+		"gulp-append-prepend": "1.0.8",
+		"husky": "^4.3.0",
+		"lint-staged": "^10.5.1",
+		"prettier": "^2.1.2"
+	},
+	"lint-staged": {
+		"src/**/*.{js,jsx,ts,tsx}": [
+			"eslint --fix"
+		],
+		"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+			"prettier --write"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+		}
+	}
 }
